--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-hot-loader": "^4.13.0"
+    "react-hot-loader": "^4.13.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "webpack": "^5.71.0",
-    "webpack-cli": "^4.9.2",
-    "@babel/preset-react": "^7.16.7",
-    "babel-loader": "^8.2.4",
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "@hot-loader/react-dom": "^17.0.2+4.13.0",
-    "webpack-dev-server": "^4.7.4",
+    "babel-jest": "^27.5.1",
+    "babel-loader": "^8.2.4",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
-    "babel-jest": "^27.5.1",
-    "css-loader": "^6.7.1",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "webpack": "^5.71.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
