Add editor component

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hot-loader": "^4.13.0",
+    "sass": "^1.51.0",
+    "sass-loader": "^12.6.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
