--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hot-loader": "^4.13.0",
+    "react-visibility-sensor": "^5.1.1",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "styled-components": "^5.3.5"
