--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
+    "build": "NODE_ENV=production webpack build --mode production --config ./webpack.config.prod.js",
     "start": "webpack serve --hot --mode development",
     "test": "jest"
   },
@@ -33,11 +34,13 @@
     "@hot-loader/react-dom": "^17.0.2+4.13.0",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.4",
+    "compression-webpack-plugin": "^10.0.0",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.71.0",
+    "webpack-bundle-analyzer": "^4.9.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
   }
