--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,13 @@
 {
-  presets: [
-    [
-      '@babel/preset-env',
-      {
-        modules: false
-      }
-    ],
-    '@babel/preset-react'
-  ],
-  plugins: [
-    'react-hot-loader/babel'
+  "presets": [
+      [
+          "@babel/preset-env",
+          {
+              "targets": {
+                  "node": "10.0.0"
+              }
+          }
+      ],
+      "@babel/preset-react"
   ]
 }
