--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@charlietango/use-native-lazy-loading": "^1.10.0",
+    "crypto-js": "^4.1.1",
     "faye": "^1.4.0",
     "hls.js": "^1.3.4",
     "react": "^18.0.0",
