--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-hot-loader": "^4.13.0",
     "react-intersection-observer": "^9.4.3",
     "react-router-dom": "^6.8.1",
+    "react-virtualized-auto-sizer": "^1.0.20",
+    "react-window": "^1.8.9",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "styled-components": "^5.3.5",
