--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hls.js": "^1.3.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-intersection-observer": "^9.4.3",
     "react-router-dom": "^6.8.1",
     "sass": "^1.51.0",
