--- a/.babelrc
+++ b/.babelrc
@@ -9,5 +9,11 @@
           }
       ],
       "@babel/preset-react"
+  ],
+  "plugins": [
+    ["@babel/plugin-transform-react-jsx", {
+    //   "pragma": "h",
+    //   "pragmaFrag": "Fragment"
+    }]
   ]
 }
