--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@charlietango/use-native-lazy-loading": "^1.10.0",
     "faye": "^1.4.0",
     "hls.js": "^1.3.4",
+    "preact": "^10.23.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-infinite-scroll-component": "^6.1.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
+    "@babel/plugin-transform-react-jsx": "^7.25.2",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@hot-loader/react-dom": "^17.0.2+4.13.0",
@@ -40,7 +42,7 @@
     "jest": "^27.5.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.71.0",
-    "webpack-bundle-analyzer": "^4.9.1",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
   }
