--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-router-dom": "^6.8.1",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "wouter-preact": "^3.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
